# web-server

./: .clang-format  .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  meson.build  meson.options
src/: main.rs  requests.rs  routes.rs  server.rs  threads.rs
src/requests/: handler.rs  http_method.rs  job.rs  listener.rs  method.rs  request.rs  response.rs  status.rs  version.rs
src/routes/: index.rs  slow_request.rs
src/threads/: pool.rs  worker.rs
src/web-server/: main.cpp  server.hpp  tools.hpp
src/web-server/helpers/: compat.hpp  errors.cpp  errors.hpp  sockets.cpp  sockets.hpp  string.cpp  string.hpp  threads.hpp
src/web-server/requests/: errors.cpp  errors.hpp  job.hpp  method.cpp  method.hpp  request.cpp  request.hpp  response.cpp  response.hpp  status.cpp  status.hpp  version.cpp  version.hpp
src/web-server/routes/: index.cpp  index.hpp  not_found.cpp  not_found.hpp  slow_request.cpp  slow_request.hpp  templates_directory.hpp.in
src/web-server/server/: debug.hpp  http_handlers.cpp  http_handlers.hpp  io_context.cpp  io_context.hpp  running_state.cpp  running_state.hpp  server.hpp
src/web-server/threads/: pool.hpp  worker.cpp  worker.hpp
src/web-server/threads/queue/: creator.hpp  extractor.hpp  inserter.hpp  queue.hpp
subprojects/: range-v3.wrap
templates/: index.html  not_found.html  service_unavailable.html  slow_request.html
