[package]
name = "web_server"
version = "0.10.0"
authors = ["Xyphenore"]
description = "This is a multithreaded Web server. It is an exercise of the Rust Book."
readme = "README.md"
keywords = ["web", "server"]
categories = ["web-programming", "web-programming::http-server"]

repository = "https://github.com/Xyphenore/web-server"
license = "LGPL-3.0-or-later"
publish = false

edition = "2021"
rust-version = "1.79.0"

include = ["/src", "README.md", "LICENSE.md"]

[badges]
maintenance = { status = "deprecated" }

[dependencies]
ctrlc = "~3.4.4"

[dev-dependencies]

[build-dependencies]
